--- a/style.css
+++ b/style.css
@@ -59,11 +59,18 @@ body{
     text-align: right;
     color: #FFFFFF;
 }
+/*.panel{*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    gap: 10px;*/
+/*    padding-left: 5px;*/
+/*    padding-top: 40px;*/
+/*}*/
 .panel{
     display: flex;
-    flex-direction: column;
     gap: 10px;
-    padding-left: 5px;
+    flex-wrap: wrap;
+    padding-left: 18px;
     padding-top: 40px;
 }
 .str{
@@ -121,10 +128,10 @@ button.yellow span{
 }
 
 .btn-big{
-    width: 169px;
+    width: 165px;
 }
 .btn-big span{
-    width: 160px;
+    width: 156px;
 }
 span{
     font-size: 21px;
